--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html { box-sizing: border-box; }
 /*
  BARVY
  sede pozadi      #e5e5e5
- svetle fialova   #48418e
+ svetle fialova   #48418e  //  #4d3fa5
  tmave fialova    #25133d  //  #3c3180
 
  POUZITE PISMO
@@ -47,7 +47,7 @@ h1 {
 .header {
 	font-size: 18px;
 	color: white;
-	background-color: #3c3180/*rgba(8, 8, 8, 0.79)*/;
+	background-color: #3c3180;
 }
 
 .logo {
@@ -77,16 +77,16 @@ h1 {
 
 .item:hover {
 	color: white;
-	background-color: #3c3180;
+	background-color: #302867;
 }
 
-/* ------------- Hero ----- */
+/* ----------- Hero sekce / banner ----- */
 
 .hero {
 	background: #3c3180 url(images/pozadi.jpg) no-repeat top left/cover;
 	padding: 30px;
 	padding-bottom: 0;
-	min-height: 700px;
+	min-height: 600px;
 	position: relative;
 }
 
@@ -110,27 +110,72 @@ h1 {
 	max-width: 500px;
 }
 
+
 .purple {
 	margin-bottom: 10px;
 	font-weight: 400;
-	background-color: #4d3fa5;
+	background-color: #4B2561;
+}
+
+.purple:hover {
+	background-color: #381C48;
 }
 
 .trans {
 	font-weight: 300;
 }
 
-.image {
-	/*min-height: 440px;/*/
-	max-height: 100%;
+.trans:hover {
+	font-weight: bold;
+	color: #412055;
+	border: 2px solid #412055;
 }
+
 
 .image img { 
 	display: block;
 	position: absolute;
 	right: 0;
 	bottom: 0;
-	max-height: 45%;
+	max-height: 40%;
 	max-width: 90%;
 	margin-top: 20px;
+}
+
+/* ----------- Obsah se 3 sloupci ----- */
+
+.container {
+	padding: 0 30px;
+	text-align: center;
+	font-size: 20px;
+}
+
+.box {
+	margin: 50px 0;
+}
+
+.box h2 {
+	color: #48418e;
+	font-weight: 700;
+	margin: 10px 0;
+}
+
+.box p {
+	margin: 0;
+}
+
+.box img {
+	width: 90px;
+}
+
+/* ----------- Patička ----- */
+
+
+footer p {
+	color: white;
+	background-color: #48418e;
+	font-weight: bold;
+	text-align: center;
+	margin: 0;
+	padding: 10px;
 }
