--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 h1 {
 	color: white;
-	font-size: 40px;
+	font-size: 45px;
 	font-weight: 400;
 	margin-top: 0;
 }
@@ -228,14 +228,10 @@ footer p {
 		padding: 30px;
 	}
 
-	/*.text h1 {
-		font-size: 60px;
+	.text h1 {
+		font-size: 50px;
+		margin: 0;
 	}
-
-	.text p {
-		font-size: 28px;
-		margin-bottom: 60px;
-	}*/
 
 	.buttons {
 		max-width: 250px;
@@ -261,9 +257,40 @@ footer p {
 
 }
 
+@media screen and (min-width: 630px) {
+	.text h1 {
+		font-size: 55px;
+		margin: 0;
+	}
+
+	.image img {
+		max-height: 70%;
+	}
+}
+
+
+@media screen and (min-width: 700px) {
+	.text h1 {
+		font-size: 60px;
+		margin: 0;
+	}
+
+	.image img {
+		max-height: 75%;
+	}
+}
 
 
 @media screen and (min-width: 760px) {
+	.text h1 {
+		font-size: 70px;
+		margin: 0;
+	}
+
+	.text p {
+		font-size: 28px;
+	}
+
 	#free {
 		display: block;
 		flex: 0 0 212px
@@ -272,9 +299,23 @@ footer p {
 	.image img {
 		max-height: 80%;
 	}
+
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 870px) {
+	.text h1 {
+		font-size: 85px;
+		margin: 0;
+	}
+
+	.text p {
+		font-size: 28px;
+	}
+
+	.image img {
+		max-height: 80%;
+	}
+
 	.buttons {
 		display: flex;
 		gap: 20px;
@@ -282,7 +323,42 @@ footer p {
 	}
 
 	.but {
-		flex: 1 1 40%;
-		max-width: 100%;
+		flex: 1 0 85%;
+		margin: 0;
 	}
+
+}
+
+@media screen and (min-width: 960px) {
+	.hero h1 {
+		font-size: 90px;
+		font-weight: 400;
+		margin: 0;
+	}
+
+	.hero p {
+		font-size: 36px;
+		font-weight: 300;
+	}
+
+	/*.buttons {
+		display: flex;
+		gap: 20px;
+		width: 100%;
+	}
+
+	.but {
+		flex: 1 0 85%;
+		margin: 0;
+	}*/
+
+	.image img {
+		max-height: 90%;
+	}
+
+	.container {
+		display: flex;
+		gap: 40px;
+	}
+
 }
