--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 h1 {
 	color: white;
-	font-size: 45px;
+	font-size: 40px;
 	font-weight: 400;
 	margin-top: 0;
 }
@@ -107,7 +107,7 @@ h1 {
 	border: 1px solid white;
 	border-radius: 5px;
 	text-align: center;
-	max-width: 500px;
+	max-width: 490px;
 }
 
 
@@ -137,8 +137,7 @@ h1 {
 	position: absolute;
 	right: 0;
 	bottom: 0;
-	max-height: 40%;
-	max-width: 90%;
+	max-height: 38%;
 	margin-top: 20px;
 }
 
@@ -180,14 +179,38 @@ footer p {
 	padding: 10px;
 }
 
+@media screen and (min-width: 480px) and (max-width: 550px) {
+	.hero {
+		min-height: 450px;
+	}
+	
+	.text p {
+		margin-bottom: 110px;
+	}
 
+	.buttons {
+		margin: 0 auto;
+	}
 
+	.but {
+		max-width: 250px;
+		margin: 10px auto;
+	}
+
+	.image img {
+		max-height: 45%;
+		max-width: 60%;
+		position: absolute;
+		top: 40px;
+		right: -20px;
+	}
+}
 
 /* ***** TABLET Version ***** */
 
 /* ------------- Menu ----- */
 
-@media screen and (min-width: 560px) {
+@media screen and (min-width: 550px) {
 	.header {
 		color: black;
 		background-color: white;
@@ -233,6 +256,10 @@ footer p {
 		margin: 0;
 	}
 
+	.text p {
+		margin-bottom: 60px;
+	}
+
 	.buttons {
 		max-width: 250px;
 	}
@@ -244,7 +271,7 @@ footer p {
 	}
 
 	.image img {
-		max-height: 58%;
+		max-height: 55%;
 	}
 
 
@@ -257,10 +284,15 @@ footer p {
 
 }
 
+
 @media screen and (min-width: 630px) {
 	.text h1 {
 		font-size: 55px;
 		margin: 0;
+	}
+
+	.text p {
+		margin: 30px 0 60px 0;
 	}
 
 	.image img {
@@ -304,7 +336,7 @@ footer p {
 
 @media screen and (min-width: 870px) {
 	.text h1 {
-		font-size: 85px;
+		font-size: 83px;
 		margin: 0;
 	}
 
@@ -339,6 +371,7 @@ footer p {
 	.hero p {
 		font-size: 36px;
 		font-weight: 300;
+		margin-bottom: 35px;
 	}
 
 	/*.buttons {
